tests/semantic/rule_undeclared_relation2/rule_undeclared_relation2.err
Error: Undefined relation b in file rule_undeclared_relation2.dl at line 5
a(X) :- a(X), !b(X).
---------------^-----
Error: Not all clauses could be typechecked due to other errors present
2 errors generated, evaluation aborted
